--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 body{
     background-color: #0a0a0a;
 }
+
+h1{
+    font-family: 'Archivo Black', sans-serif;
+    text-align: center;
+    color: white;
+    font-size: 49px;
+    
+}
+
+h3{
+    color: white;
+    font-family: 'Archivo Black', sans-serif;
+    text-align: center;
+}
