--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
 body{
-    background-color: #0a0a0a;
+    background-color: white;
 }
 
 h1{
     font-family: 'Archivo Black', sans-serif;
     text-align: center;
-    color: white;
     font-size: 49px;
-    
+    color: black
 }
 
 h3{
-    color: white;
+    color: black;
     font-family: 'Archivo Black', sans-serif;
     text-align: center;
 }
