--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ h1{
     margin-bottom: 80px;
 }
 
+.titleCD{
+    font-size: 60px;
+}
+
 h2{
     text-align: center;
     letter-spacing: 9px;
@@ -39,7 +43,7 @@ li span {
 }
 
 .cergo{
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 .gif{
