--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ h1{
     font-size: 50px;
     color: black;
     margin-top: 20px;
-    margin-bottom: 80px;
 }
 
 .titleCD{
@@ -23,11 +22,12 @@ h2{
 
 .containerCount {
   text-align: center;
+  border: solid 1px black;
 }
 
 li {
   display: inline-block;
-  font-size: 1.5em;
+  font-size: 14px;
   list-style-type: none;
   padding: 1em;
   text-transform: uppercase;
@@ -35,7 +35,7 @@ li {
 
 li span {
   display: block;
-  font-size: 4.5rem;
+  font-size: 25px;
 }
 
 .accredito{
