--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ h2{
 .count {
     text-align: center;
     border: solid 1px black;  
+    background-color: black
 }
 
 li {  
@@ -31,6 +32,7 @@ li {
   list-style-type: none;
   padding: 1em;
   text-transform: uppercase;
+    color: white;
 }
 
 li span {
