--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ h1{
 h2{
     text-align: center;
     letter-spacing: 9px;
-    margin-bottom: 20px;
+    margin-bottom: 120px;
+    margin-top: 90px;
+    font-size: 50px;
 }
 
 .count {
